--- a/metaverse-codefest-dash/src/App.css
+++ b/metaverse-codefest-dash/src/App.css
@@ -1,60 +1,10 @@
 .App {
   text-align: center;
-  padding-bottom:5%;
-  background-color: #f9f9f9;
+  background-color: #f3f9fa;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.dash-card{
-  padding:5% 0% 1% 0% !important;
-}
-
-.dash-card::after{
-  padding:2% 0% 2% 0% !important;
-}
-
-.dash-card-header{
-  margin-top: -22%;
+.dash-card-header {
   margin-bottom: 5%;
-  background-color: #00d1c0;
   padding-top: 5%;
   padding-bottom: 5%;
   border-radius: 5px 5px 0px 0px;
-}
-
-.dash-header{
-  margin-top:0px;
-  margin-bottom:4%;
-  background-color: #013148;
-  display: grid;
-  grid-template-columns: 20% 80%;
-  align-items: baseline;
-  justify-items: center;
-}
-
-.dash-header > .ui.header{
-  color: whitesmoke;
-  margin-left: -20%;
-  font-size: 240%;
-  margin-top: 2%;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
